# web-scraper

./: .gitignore  README.md  data.csv  dockerfile  domain_data.json  main.py  posts.csv  pyproject.toml  run-script.py  settings.py
.github/workflows/: deploy-prod.yml
app/models/: post.py
app/persistence/: __init__.py  db.py
app/repositories/: __init__.py  posts_repository.py
app/routers/: __init__.py  data_router.py
app/services/: __init__.py  posts_etl.py  store_service.py  web_scraping_service.py  whois_api_service.py
